# EmbeddedClient

./: Cargo.toml  README.md  build.rs
src/: Exports.def  binkw.x64.S  binkw.x86.S  constants.rs  hooks.rs  lib.rs  native.rs  pattern.rs  plugin.rs
src/interface/: mod.rs
src/proxy/: mod.rs
src/servers/: main.rs  mod.rs  qos.rs  redirector.rs  telemetry.rs
