[package]
name = "pocket-relay-hooks"
version = "0.1.0"
edition = "2021"
description = "DLL that patches portions of ME3 to allow PocketRelay to work"
repository = "https://github.com/PocketRelay/PocketRelayHooks"
license = "MIT"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["Hooking"]
build = "build.rs"

[lib]
name = "binkw32"
crate-type = ["cdylib"]

[build-dependencies]
exe = "^0.5.6"

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }

# Blaze packet system 
blaze-pk = "1"
# Blaze SSLv3 async TCPStream implementation
blaze-ssl-async = "^0.3"
# Native file picker dialog
native-dialog = "0.6.3"
# Library for obtaining the local IP address of the device
local-ip-address = "0.5"

tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
thiserror = "1"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Networking_WinSock"
]

# Tokio async runtime
[dependencies.tokio]
version = "1"
features = ["macros", "net", "parking_lot", "rt-multi-thread", "sync"]


[patch.crates-io]
local-ip-address = { git = "https://github.com/jacobtread/local-ip-address.git" }

[dependencies.native-windows-gui]
version = "1.0.13"


# Compile x86
# cargo build --release --target i686-pc-windows-msvc


# Compile std to reduce size:
# cargo +nightly build -Z build-std=std,panic_abort --release --target x86_64-pc-windows-msvc
# [profile.release]
# opt-level = "z"
# codegen-units = 1
# panic = "abort"
# strip = true
# lto = true
